<resources>
    <string name="app_name">天气</string>
    <string name="city_name_str">%s&#062;</string>
    <string name="temp_str">%s℃</string>
    <string name="wd_str">风向:%s</string>
    <string name="ws_str">风速:%s</string>
    <string name="sd_str">湿度:%s</string>
    <string name="ap_str">气压:%s</string>
    <string name="weather_str">%s</string>
    <string name="region_str">IP地址城市：%s</string>
</resources>
