<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    tools:context=".WeatherActivity">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_name_str"
        android:textSize="25sp"
         />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/temp_str"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/weather_str"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/wd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wd_str"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/ws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/ws_str"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/sd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sd_str"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/ap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ap_str"
        android:layout_marginStart="20dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/region_str"
        android:textSize="18sp" />


</GridLayout>